--- a/css/main.css
+++ b/css/main.css
@@ -1,34 +1,7 @@
-/* logo, nav-menu, button, icon, contact (reaction) #2196F3  #AFB1B8 */
-/* logo #000000 */
-/* contact #757575 */
-/* nav-menu, filter-button #212121 #ffffff */
-/* title, link #ffffff #212121 */
-/* text #757575 */
-/* background #ffffff */
-/* section-bg #F5F4FA */
-/* common */
-/* html {
-    box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
-} */
-:root {
-  --title-color: #212121;
-  --primary-white-color: #ffffff;
-  --accent-color: #2196F3;
-  --font-logo: 'Raleway', sans-serif;
-  --font-text: 'Roboto', sans
-    ;
-}
-
 body {
   color: #757575;
   background-color: #ffffff;
-  font-family: var(--font-text);
+  font-family: "Roboto", sans;
   font-style: normal;
 }
 
@@ -53,7 +26,7 @@ body {
 /* h2 */
 .section-title {
   margin-bottom: 50px;
-  color: var(--title-color);
+  color: #212121;
   font-weight: bold;
   font-size: 36px;
   line-height: 1.16;
@@ -64,7 +37,7 @@ body {
 /* h3  */
 .title {
   margin-bottom: 10px;
-  color: var(--title-color);
+  color: #212121;
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -72,7 +45,6 @@ body {
   text-transform: uppercase;
 }
 
-/* header */
 /* logo */
 .container {
   width: 1200px;
@@ -85,7 +57,7 @@ body {
 
 .logo {
   color: #000000;
-  font-family: var(--font-logo);
+  font-family: "Raleway", sans-serif;
   font-weight: bold;
   font-size: 26px;
   line-height: 1.20;
@@ -93,7 +65,7 @@ body {
 }
 
 .logo-design {
-  color: var(--accent-color);
+  color: #2196F3;
 }
 
 /* navigation */
@@ -131,7 +103,7 @@ body {
 
 .link-nav:hover,
 .link-nav:focus {
-  color: var(--accent-color);
+  color: #2196F3;
   outline: transparent;
 }
 
@@ -145,7 +117,7 @@ body {
   position: absolute;
   width: 100%;
   height: 4px;
-  background-color: var(--accent-color);
+  background-color: #2196F3;
   border-radius: 2px;
   left: 0;
   bottom: 0;
@@ -181,7 +153,7 @@ body {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* address */
+/* contact */
 .contact-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -208,7 +180,7 @@ body {
 
 .link-contact:hover,
 .link-contact:focus {
-  color: var(--accent-color);
+  color: #2196F3;
   outline: transparent;
 }
 
@@ -224,7 +196,7 @@ body {
 
 .link-contact:hover,
 .link-contact:focus .icon-contact-mail {
-  --color3: var(--accent-color);
+  --color3: #2196F3;
   outline: transparent;
 }
 
@@ -240,11 +212,10 @@ body {
 
 .link-contact:hover,
 .link-contact:focus .icon-contact-phon {
-  --color3: var(--accent-color);
+  --color3: #2196F3;
   outline: transparent;
 }
 
-/* footer */
 footer {
   background-color: #2F303A;
 }
@@ -269,7 +240,7 @@ footer {
 .address-text {
   margin-bottom: 9px;
   min-width: 220px;
-  color: var(--primary-white-color);
+  color: #ffffff;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -297,6 +268,15 @@ footer {
   text-decoration: none;
 }
 
+/* social container */
+.social-flex {
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  margin-top: 57px;
+  margin-left: 68px;
+}
+
 .contact {
   display: inline-block;
   margin-bottom: 20px;
@@ -306,15 +286,6 @@ footer {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-}
-
-/* social container */
-.social-flex {
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
-  margin-top: 57px;
-  margin-left: 68px;
 }
 
 .social {
@@ -354,7 +325,7 @@ footer {
 
 .social-link-second:hover,
 .social-link-second:focus {
-  background-color: var(--accent-color);
+  background-color: #2196F3;
   outline: transparent;
 }
 
@@ -385,9 +356,6 @@ footer {
 .footer-input {
   width: 355px;
   padding: 15px 16px;
-  /* height: 50px;
-                                            left: 815px;
-                                            top: 2779px; */
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -425,8 +393,8 @@ footer {
   padding-bottom: 10px;
   /* padding-right: 30px; */
   border-radius: 4px;
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
+  color: #ffffff;
+  background-color: #2196F3;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -464,7 +432,7 @@ footer {
   padding-left: 250px;
   padding-right: 250px;
   margin-bottom: 30px;
-  color: var(--primary-white-color);
+  color: #ffffff;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -481,8 +449,8 @@ footer {
   border-radius: 4px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
+  color: #ffffff;
+  background-color: #2196F3;
   text-align: center;
   text-decoration: none;
 }
@@ -589,7 +557,7 @@ footer {
 }
 
 .modal-close:hover > .icon-close {
-  --color3: var(--accent-color);
+  --color3: #2196F3;
 }
 
 .modal-label {
@@ -617,7 +585,7 @@ footer {
 }
 
 .modal-fild:focus {
-  border: 1px solid var(--accent-color);
+  border: 1px solid #2196F3;
   border-radius: 4px;
 }
 
@@ -631,7 +599,7 @@ footer {
 }
 
 .modal-fild:focus ~ .modal-icon {
-  --color3: var(--accent-color);
+  --color3: #2196F3;
 }
 
 .modal-fild:focus + .modal-label,
@@ -639,25 +607,6 @@ footer {
   -webkit-transform: translate(-25px, -40px);
           transform: translate(-25px, -40px);
   color: #2196F3;
-}
-
-.form-icon {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transform: translate(70%, 70%);
-          transform: translate(70%, 70%);
-  width: 18px;
-  height: 18px;
 }
 
 textarea {
@@ -682,7 +631,7 @@ textarea {
 }
 
 .modal-textarea:focus {
-  border: 1px solid var(--accent-color);
+  border: 1px solid #2196F3;
   border-radius: 4px;
 }
 
@@ -710,15 +659,15 @@ textarea {
 }
 
 .checkbox {
+  position: absolute;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  position: absolute;
 }
 
 .checkbox:checked + .checkbox-icon {
-  border-color: var(--accent-color);
-  background-color: var(--accent-color);
+  border-color: #2196F3;
+  background-color: #2196F3;
   background-image: url("../images/check.svg");
   background-size: contain;
   background-origin: border-box;
@@ -756,12 +705,12 @@ textarea {
   margin-top: 30px;
   min-width: 200px;
   min-height: 50px;
-  background-color: var(--accent-color);
+  background-color: #2196F3;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.8;
   letter-spacing: 0.06em;
-  color: #FFFFFF;
+  color: #ffffff;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -841,7 +790,7 @@ textarea {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   background: rgba(47, 48, 58, 0.8);
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 /* section - command structure */
@@ -884,7 +833,7 @@ textarea {
 /* h3 */
 .title-name {
   margin-bottom: 10px;
-  color: var(--title-color);
+  color: #212121;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -988,14 +937,14 @@ textarea {
 
 .company-link:hover,
 .company-link:focus {
-  border: 1px solid var(--accent-color);
+  border: 1px solid #2196F3;
   border-radius: 4px;
   outline: transparent;
 }
 
 .company-link:hover,
 .company-link:focus .icon-company {
-  --color3: var(--accent-color);
+  --color3: #2196F3;
   outline: transparent;
 }
 /*# sourceMappingURL=main.css.map */
