--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,34 +1,7 @@
-/* logo, nav-menu, button, icon, contact (reaction) #2196F3  #AFB1B8 */
-/* logo #000000 */
-/* contact #757575 */
-/* nav-menu, filter-button #212121 #ffffff */
-/* title, link #ffffff #212121 */
-/* text #757575 */
-/* background #ffffff */
-/* section-bg #F5F4FA */
-/* common */
-/* html {
-    box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
-} */
-:root {
-  --title-color: #212121;
-  --primary-white-color: #ffffff;
-  --accent-color: #2196F3;
-  --font-logo: 'Raleway', sans-serif;
-  --font-text: 'Roboto', sans
-    ;
-}
-
 body {
   color: #757575;
   background-color: #ffffff;
-  font-family: var(--font-text);
+  font-family: "Roboto", sans;
   font-style: normal;
 }
 
@@ -53,7 +26,7 @@ body {
 /* h2 */
 .section-title {
   margin-bottom: 50px;
-  color: var(--title-color);
+  color: #212121;
   font-weight: bold;
   font-size: 36px;
   line-height: 1.16;
@@ -64,7 +37,7 @@ body {
 /* h3  */
 .title {
   margin-bottom: 10px;
-  color: var(--title-color);
+  color: #212121;
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -72,7 +45,6 @@ body {
   text-transform: uppercase;
 }
 
-/* header */
 /* logo */
 .container {
   width: 1200px;
@@ -85,7 +57,7 @@ body {
 
 .logo {
   color: #000000;
-  font-family: var(--font-logo);
+  font-family: "Raleway", sans-serif;
   font-weight: bold;
   font-size: 26px;
   line-height: 1.20;
@@ -93,7 +65,7 @@ body {
 }
 
 .logo-design {
-  color: var(--accent-color);
+  color: #2196F3;
 }
 
 /* navigation */
@@ -131,7 +103,7 @@ body {
 
 .link-nav:hover,
 .link-nav:focus {
-  color: var(--accent-color);
+  color: #2196F3;
   outline: transparent;
 }
 
@@ -145,7 +117,7 @@ body {
   position: absolute;
   width: 100%;
   height: 4px;
-  background-color: var(--accent-color);
+  background-color: #2196F3;
   border-radius: 2px;
   left: 0;
   bottom: 0;
@@ -181,7 +153,7 @@ body {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* address */
+/* contact */
 .contact-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -208,7 +180,7 @@ body {
 
 .link-contact:hover,
 .link-contact:focus {
-  color: var(--accent-color);
+  color: #2196F3;
   outline: transparent;
 }
 
@@ -224,7 +196,7 @@ body {
 
 .link-contact:hover,
 .link-contact:focus .icon-contact-mail {
-  --color3: var(--accent-color);
+  --color3: #2196F3;
   outline: transparent;
 }
 
@@ -240,7 +212,7 @@ body {
 
 .link-contact:hover,
 .link-contact:focus .icon-contact-phon {
-  --color3: var(--accent-color);
+  --color3: #2196F3;
   outline: transparent;
 }
 
@@ -284,7 +256,7 @@ body {
 /* h3 */
 .title-name {
   margin-bottom: 10px;
-  color: var(--title-color);
+  color: #212121;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -353,7 +325,6 @@ body {
   outline: transparent;
 }
 
-/* footer */
 footer {
   background-color: #2F303A;
 }
@@ -378,7 +349,7 @@ footer {
 .address-text {
   margin-bottom: 9px;
   min-width: 220px;
-  color: var(--primary-white-color);
+  color: #ffffff;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -406,6 +377,15 @@ footer {
   text-decoration: none;
 }
 
+/* social container */
+.social-flex {
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  margin-top: 57px;
+  margin-left: 68px;
+}
+
 .contact {
   display: inline-block;
   margin-bottom: 20px;
@@ -415,15 +395,6 @@ footer {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-}
-
-/* social container */
-.social-flex {
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
-  margin-top: 57px;
-  margin-left: 68px;
 }
 
 .social {
@@ -463,7 +434,7 @@ footer {
 
 .social-link-second:hover,
 .social-link-second:focus {
-  background-color: var(--accent-color);
+  background-color: #2196F3;
   outline: transparent;
 }
 
@@ -494,9 +465,6 @@ footer {
 .footer-input {
   width: 355px;
   padding: 15px 16px;
-  /* height: 50px;
-                                            left: 815px;
-                                            top: 2779px; */
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -534,8 +502,8 @@ footer {
   padding-bottom: 10px;
   /* padding-right: 30px; */
   border-radius: 4px;
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
+  color: #ffffff;
+  background-color: #2196F3;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -562,7 +530,6 @@ footer {
   letter-spacing: 0.03em;
 }
 
-/* Portfolio */
 /* filter button */
 button {
   padding: 6px 22px;
@@ -578,7 +545,6 @@ button {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  /* display: inline-block; */
   margin-bottom: 34px;
 }
 
@@ -587,7 +553,7 @@ button {
 }
 
 .button-first {
-  color: var(--title-color);
+  color: #212121;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
@@ -597,8 +563,8 @@ button {
 
 .button-second:hover,
 .button-second:focus {
-  background-color: var(--accent-color);
-  color: var(--primary-white-color);
+  background-color: #2196F3;
+  color: #ffffff;
   outline: transparent;
 }
 
@@ -621,7 +587,7 @@ button {
 }
 
 .gallery-shadow {
-  background: #FFFFFF;
+  background: #ffffff;
   border: 1px solid #EEEEEE;
 }
 
@@ -646,7 +612,7 @@ button {
 .gallery-title {
   margin-left: 24px;
   margin-bottom: 4px;
-  color: var(--title-color);
+  color: #212121;
   font-weight: bold;
   font-size: 18px;
   line-height: 2;
@@ -718,8 +684,7 @@ button {
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  /* background-color: rgba(33, 149, 243, 0.9); */
-  color: #FFFFFF;
+  color: #ffffff;
   overflow: hidden;
 }
 
