--- a/sass/common/_common.scss
+++ b/sass/common/_common.scss
@@ -1,8 +1,8 @@
                   
  body {
-    color: #757575;
-    background-color: #ffffff;
-    font-family: var(--font-text);
+    color: $secondary-color;
+    background-color: $primary-white-color;
+    font-family: $font-text;
     font-style: normal;
 }
                     /* hiden mark; reset ul */
@@ -23,25 +23,25 @@
 
                      /* h2 */
 
-                     .section-title {
-                        margin-bottom: 50px;
+ .section-title {
+    margin-bottom: 50px;
                     
-                        color: var(--title-color);
-                        font-weight: bold;
-                        font-size: 36px;
-                        line-height: 1.16;
-                        text-align: center;
-                        letter-spacing: 0.03em;
-                    }
+    color: $title-color;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
                     
-                                         /* h3  */
-                    .title {
-                        margin-bottom: 10px;
+                     /* h3  */
+.title {
+    margin-bottom: 10px;
                     
-                        color: var(--title-color);
-                        font-weight: bold;
-                        font-size: 14px;
-                        line-height: 1.14;
-                        letter-spacing: 0.03em;
-                        text-transform: uppercase;
-                    }
+    color: $title-color;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
