--- a/sass/common/_page-footer.scss
+++ b/sass/common/_page-footer.scss
@@ -1,202 +1,201 @@
-                                           /* footer */
 
-                                           footer {
-    
-                                            background-color: #2F303A;
-                                        }
-                                                              /* main footer container */
-                                        .footer-flex {
-                                            display: flex;
-                                        }
-                                                               /* address container */
-                                        .address-flex {
-                                            margin-top: 45px;
-                                        }
+
+footer {    
+    background-color: #2F303A;
+}
+            
+             /* main footer container */
+.footer-flex {
+     display: flex;
+}
+                         
+             /* address container */
+.address-flex {
+    margin-top: 45px;
+}
                                         
-                                        .logo-footer {
-                                            display: inline-block;
-                                            margin-bottom: 8px;
-                                        }
+.logo-footer {
+    display: inline-block;
+    margin-bottom: 8px;
+}
                                         
-                                        .address-text {
-                                            margin-bottom: 9px;
-                                            min-width: 220px;
+.address-text {
+    margin-bottom: 9px;
+    min-width: 220px;
                                         
-                                            color: var(--primary-white-color);
-                                            font-style: normal;
-                                            font-weight: normal;
-                                            font-size: 14px;
-                                            line-height: 1.7;
-                                            letter-spacing: 0.03em;
-                                        }
+    color: $primary-white-color;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+}
                                         
-                                        .mail-footer {
-                                            display: inline-block;
-                                            margin-bottom: 9px;
-                                        }
+.mail-footer {
+    display: inline-block;
+    margin-bottom: 9px;
+}
                                         
-                                        .phon-footer {
-                                            display: inline-block;
-                                            margin-bottom: 28px;
-                                        }
+.phon-footer {
+    display: inline-block;
+    margin-bottom: 28px;
+}
                                         
-                                        .contact-footer .link-footer {
-                                            color: rgba(255, 255, 255, 0.6);
-                                            font-style: normal;
-                                            font-weight: normal;
-                                            font-size: 14px;
-                                            line-height: 1.7;
-                                            letter-spacing: 0.03em;
-                                            text-decoration: none;
-                                        }
+.contact-footer .link-footer {
+    color: rgba(255, 255, 255, 0.6);
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+    text-decoration: none;
+}
                                         
-                                        .contact {
-                                            display: inline-block;
-                                            margin-bottom: 20px;
+
+                /* social container */
+.social-flex {
+    justify-content: left;
                                         
-                                            color: #ffffff;
-                                            font-weight: bold;
-                                            font-size: 14px;
-                                            line-height: 1.14;
-                                            letter-spacing: 0.03em;
-                                            text-transform: uppercase;
-                                        }
-                                                               /* social container */
-                                        .social-flex {
-                                            justify-content: left;
+    margin-top: 57px;
+    margin-left: 68px;
+}
+
+.contact {
+    display: inline-block;
+    margin-bottom: 20px;
                                         
-                                            margin-top: 57px;
-                                            margin-left: 68px;
-                                        }
+    color: $primary-white-color;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}    
+
+.social {
+    display: flex;
+}
                                         
-                                        .social {
-                                            display: flex;
-                                        }
+.icon-send {
+    height: 24px;
+    width: 24px;
                                         
-                                        .icon-send {
-                                            height: 24px;
-                                            width: 24px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
                                         
-                                            margin-left: 10px;
-                                            margin-right: 10px;
-                                        }
+.icon-footer:not(:first-child) {
+    margin-left: 10px;
+}
                                         
-                                        .icon-footer:not(:first-child) {
-                                            margin-left: 10px;
-                                        }
+.social-link-second {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
                                         
-                                        .social-link-second {
-                                            display: inline-flex;
-                                            justify-content: center;
-                                            align-items: center;
+    padding: 0;
+    margin: 0;
                                         
-                                            padding: 0;
-                                            margin: 0;
+    height: 44px;
+    width: 44px;
                                         
-                                            height: 44px;
-                                            width: 44px;
+    border-radius: 50px;
+    background-color: rgba(255, 255, 255, 0.1);
+}
                                         
-                                            border-radius: 50px;
-                                            background-color: rgba(255, 255, 255, 0.1);
-                                        }
+.social-link-second:hover,
+.social-link-second:focus {
+    background-color: $accent-color;
+    outline: transparent;
+}
                                         
-                                        .social-link-second:hover,
-                                        .social-link-second:focus {
-                                            background-color: var(--accent-color);
-                                            outline: transparent;
-                                        }
+.social-link-second:hover,
+.social-link-second:focus .icon-social {
+    --color3: #ffffff;
+    outline: transparent;
+}
                                         
-                                        .social-link-second:hover,
-                                        .social-link-second:focus .icon-social {
-                                            --color3: #ffffff;
-                                            outline: transparent;
-                                        }
+                    /* subscriber container */
+.subscribe {
+    margin-top: 57px;
+    margin-left: 90px;
+}
                                         
-                                                            /* subscriber container */
-                                        .subscribe {
-                                            margin-top: 57px;
-                                            margin-left: 90px;
-                                        }
+.footer-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
                                         
-                                        .footer-form {
-                                            display: flex;
-                                            justify-content: center;
-                                            align-items: center;
-                                        }
+.footer-input {
+    width: 355px;
                                         
-                                        .footer-input {
-                                            width: 355px;
-                                        
-                                            padding: 15px 16px;
-                                        
-                                            /* height: 50px;
-                                            left: 815px;
-                                            top: 2779px; */
+    padding: 15px 16px;
+                                               
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
                                             
-                                            border: 1px solid rgba(255, 255, 255, 0.3);
-                                            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-                                            border-radius: 4px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 1.25;
                                             
-                                            font-style: normal;
-                                            font-weight: normal;
-                                            font-size: 16px;
-                                            line-height: 1.25;
+    align-items: center;
+    letter-spacing: 0.03em;
+                                        
+    background: #2F303A;
                                             
-                                            align-items: center;
-                                            letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
                                         
-                                            background: #2F303A;
-                                            
-                                            color: rgba(255, 255, 255, 0.6);
-                                        }
+.button-footer {
+    display: inline-flex;
+    justify-content: center;
+}
                                         
-                                        .button-footer {
-                                            display: inline-flex;
-                                            justify-content: center;
-                                        }
+.button-footer {
+    align-items: left;
                                         
-                                        .button-footer {
-                                            align-items: left;
-                                        
-                                            height: 50px;
-                                            width: 220px;
+    height: 50px;
+    width: 220px;
                                            
-                                            margin-left: 12px;
-                                            padding-top: 10px;
-                                            padding-left: 30px;
-                                            padding-bottom: 10px;
-                                            /* padding-right: 30px; */
+    margin-left: 12px;
+    padding-top: 10px;
+    padding-left: 30px;
+    padding-bottom: 10px;
+    /* padding-right: 30px; */
                                             
-                                            border-radius: 4px;    
+    border-radius: 4px;    
                                         
-                                            color: var(--primary-white-color);
-                                            background-color: var(--accent-color);
+    color: $primary-white-color;
+    background-color: $accent-color;
                                         
-                                            font-style: normal;
-                                            font-weight: bold;
-                                            font-size: 16px;
-                                            line-height: 1.8;
-                                            text-align: center;
-                                            text-decoration: none;
-                                            letter-spacing: normal;
-                                        }
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.8;
+    text-align: center;
+    text-decoration: none;
+    letter-spacing: normal;
+}
                                         
-                                                            /* copy container */
-                                        .copy-flex {
-                                            padding-top: 18px;
-                                            padding-bottom: 21px;
-                                            border-top: 1px solid rgba(255, 255, 255, 0.1);
-                                        }
+                    /* copy container */
+.copy-flex {
+    padding-top: 18px;
+    padding-bottom: 21px;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
                                         
-                                        .copy {
-                                            margin-bottom: 0;
+.copy {
+    margin-bottom: 0;
                                         
-                                            color: rgba(255, 255, 255, 0.4);
-                                            font-weight: normal;
-                                            font-size: 12px;
-                                            line-height: 2;
-                                            text-align: center;
-                                            letter-spacing: 0.03em;
-                                        }
+    color: rgba(255, 255, 255, 0.4);
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 2;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
                                         
                                         
