--- a/sass/components/_portfolio-filter.scss
+++ b/sass/components/_portfolio-filter.scss
@@ -1,40 +1,39 @@
-             /* Portfolio */
+                                        
+        /* filter button */
 
-                                        /* filter button */
+button {
+    padding: 6px 22px;
 
-                                        button {
-                                            padding: 6px 22px;
-                                            border: transparent;
-                                            border-radius: 4px;
+    border: transparent;
+    border-radius: 4px;
                                         
-                                            font-family: inherit;
-                                        }
+    font-family: inherit;
+}
                                         
-                                        .button-filter {
-                                            display: flex;
-                                            justify-content: center;
+.button-filter {
+    display: flex;
+    justify-content: center;
                                         
-                                            /* display: inline-block; */
-                                            margin-bottom: 34px;
-                                        }
+    margin-bottom: 34px;
+}
                                         
-                                        .button-filter .item:not(:first-child) {
-                                            margin-left: 8px;
-                                        }
+.button-filter .item:not(:first-child) {
+    margin-left: 8px;
+}
                                         
-                                        .button-first {
-                                            color: var(--title-color);
-                                            font-weight: 500;
-                                            font-size: 16px;
-                                            line-height: 1.6;
-                                            text-align: center;
-                                            letter-spacing: 0.03em;
+.button-first {
+    color: $title-color;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.6;
+    text-align: center;
+    letter-spacing: 0.03em;
                                             
-                                        }
+}
                                         
-                                        .button-second:hover,
-                                        .button-second:focus {
-                                                background-color: var(--accent-color);
-                                                color: var(--primary-white-color);
-                                                outline: transparent;
-                                        }
+.button-second:hover,
+.button-second:focus {
+        background-color: $accent-color;
+        color: $primary-white-color;
+        outline: transparent;
+}
