--- a/sass/components/_portfolio-gallery.scss
+++ b/sass/components/_portfolio-gallery.scss
@@ -13,7 +13,7 @@
 }
 
 .gallery-shadow {
-    background: #FFFFFF;
+    background: $primary-white-color;
     border: 1px solid #EEEEEE;
 
     
@@ -37,14 +37,12 @@
     margin-bottom: 30px;
 }
 
-
-
-                          /* h2 */
+                /* h2 */
 .gallery-title {
     margin-left: 24px;
     margin-bottom: 4px;
 
-    color: var(--title-color);
+    color: $title-color;
     font-weight: bold;
     font-size: 18px;
     line-height: 2;
@@ -56,7 +54,7 @@
     margin-left: 24px;
     margin-bottom: 20px;
 
-    color: #757575;
+    color: $secondary-color;
     font-weight: normal;
     font-size: 16px;
     line-height: 1.8;
@@ -122,9 +120,8 @@
     
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    
-    /* background-color: rgba(33, 149, 243, 0.9); */
-    color: #FFFFFF;
+        
+    color: $primary-white-color;
     overflow: hidden;
 }
 
