--- a/sass/components/_section-activity.scss
+++ b/sass/components/_section-activity.scss
@@ -1,36 +1,36 @@
-       /* section - activity of the company */
+    /* section - activity of the company */
 
-       .activity {
-        display: flex;
-    }
+.activity {
+     display: flex;
+}
     
-    .activity .item:not(:first-child) {
-        margin-left: 30px;
-    }
+.activity .item:not(:first-child) {
+    margin-left: 30px;
+}
     
-    .product-activity {
-        position: relative;
-    }
+.product-activity {
+    position: relative;
+}
     
-    .activity-text {
-        position: absolute;
-        bottom: 0%;
-        left: 0%;
+.activity-text {
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
     
-        width: 370px;
-        height: 70px;
+    width: 370px;
+    height: 70px;
         
-        margin-bottom: 0;
-        padding-top: 27px;
+    margin-bottom: 0;
+    padding-top: 27px;
     
-        font-style: normal;
-        font-weight: bold;
-        font-size: 14px;
-        line-height: 16px;
-        text-align: center;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
     
-        background: rgba(47, 48, 58, 0.8);
-        color: #FFFFFF;
-    }
+    background: rgba(47, 48, 58, 0.8);
+    color: $primary-white-color;
+}
