--- a/sass/components/_section-companys.scss
+++ b/sass/components/_section-companys.scss
@@ -1,39 +1,39 @@
-          /* section - company partners */
+    /* section - company partners */
 
-          .company {
-            display: flex;
-            justify-content: space-around;
-        }
+.company {
+    display: flex;
+    justify-content: space-around;
+}
         
-        .company .item:not(:first-child) {
-            margin-left: 30px;
-        }
+.company .item:not(:first-child) {
+    margin-left: 30px;
+}
         
-        .company-link {
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
+.company-link {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
         
-            height: 90px;
-            width: 170px;
+    height: 90px;
+    width: 170px;
         
-            border: 1px solid #AFB1B8;
-            border-radius: 4px;
-        }
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
+}
         
-        .company-link .icon-company{
-            fill: #AFB1B8;
-        }
+.company-link .icon-company{
+    fill: #AFB1B8;
+}
         
-        .company-link:hover,
-        .company-link:focus {
-            border: 1px solid var(--accent-color);
-            border-radius: 4px;
-            outline: transparent;
-        }
+.company-link:hover,
+.company-link:focus {
+    border: 1px solid $accent-color;
+    border-radius: 4px;
+    outline: transparent;
+}
         
-        .company-link:hover,
-        .company-link:focus .icon-company {
-            --color3: var(--accent-color);
-            outline: transparent;
-        }
+.company-link:hover,
+.company-link:focus .icon-company {
+    --color3: #2196F3;
+    outline: transparent;
+}
