--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import"./common/page-header";
 @import"./common/page-footer";
 @import"./components/section-hero";
+@import"./components/modal";
 @import"./components/section-features";
 @import"./components/section-activity";
 @import"./components/section-command";
